--- a/BluetoothSpeaker_v2/platformio.ini
+++ b/BluetoothSpeaker_v2/platformio.ini
@@ -8,7 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pro16MHzatmega328]
+
+
+[env:uno]
 platform = atmelavr
-board = pro16MHzatmega328
+board = uno
 framework = arduino
+lib_deps = mathertel/OneButton@0.0.0-alpha+sha.eb583d713a
